# 2026-bioe234-final-project-sarrahroseml-1

./: .gitignore  README.md  environment.yml  pyproject.toml
creseq_mcp/: __init__.py  schema.py  server.py
creseq_mcp/activity/: classify.py  counting.py  normalize.py
creseq_mcp/association/: association.py  mpraflow.py  pipeline.py
creseq_mcp/data/papers/: agarwal2025_lentimpra.txt
creseq_mcp/literature/: search.py
creseq_mcp/motifs/: annotate.py  enrichment.py
creseq_mcp/plots/: plots.py
creseq_mcp/processing/: mpraflow.py
creseq_mcp/qc/: __init__.py  activity.py  library.py
creseq_mcp/variants/: delta_scores.py
docs/: gemini_verification.md
frontend/: agent.py  app.py
scripts/: generate_test_data.py  run_demo_pipeline.py
tests/: conftest.py  test_activity_calling.py  test_motif.py  test_plotting.py
tests/qc/: test_activity.py  test_library.py
tests/stats/: test_library.py
